58 flicks and docs updates

--- a/experimental/n/naijatype/source/naijatype.css
+++ b/experimental/n/naijatype/source/naijatype.css
@@ -1,6 +1,11 @@
+h1 {
+font-size: 250%;
+color: rgb(200,10,10);
+    }
+
 body {
     background: rgb(193, 194, 193);
-    font-family: "Andika","AndikaAfr","Andika New Basic Compact";
+    font-family: "Andika","DejaVu Sans","AndikaAfr","Andika Afr","Andika New Basic Compact";
 }
 .kmw-key-row {
 }
@@ -32,16 +37,16 @@ font-size: 1.2em;
 }
 
 .phone.android .kmw-key-popup-icon, .phone.ios .kmw-key-popup-icon {
-    font-size: 0.8em;
+    font-size: 50%;
     /*top: 70%;
     bottom: 0px;
     right: 8%;
     left: initial;*/
-    color: #8b8; 
+    color: #7b7;
 }
 
 .phone.android #kmw-popup-keys {
-   border-radius: 10px; 
+   border-radius: 10px;
 }
 
 .phone.android .kmw-banner-bar, .phone.ios .kmw-banner-bar {
