--- a/experimental/n/naijatype/source/naijatype.css
+++ b/experimental/n/naijatype/source/naijatype.css
@@ -34,6 +34,7 @@ font-size: 1.2em;
 .phone.android .kmw-key.kmw-key-default.kmw-spacebar, .phone.ios .kmw-key.kmw-key-default.kmw-spacebar {
     border: 1pt solid white;
     border-bottom: none;
+    color: gray;
 }
 
 .phone.android .kmw-key-popup-icon, .phone.ios .kmw-key-popup-icon {
@@ -42,7 +43,7 @@ font-size: 1.2em;
     bottom: 0px;
     right: 8%;
     left: initial;*/
-    color: #7b7;
+    color: #6b6;
 }
 
 .phone.android #kmw-popup-keys {
@@ -97,6 +98,16 @@ margin-bottom: 15px;
 
   /* Style for callout used on phones */
   #kmw-popup-callout {
-    background-color: #eff3f9;
+  background-color: #eff3f9;
   }
+
+    .phone.ios .kmw-key-layer-group {background-color: #eee}
+  .phone.ios .kmw-key.kmw-key-default {color:black;background-color:#eee}
+  .phone.ios .kmw-key.kmw-key-shift,
+  .phone.ios .kmw-key.kmw-key-special {color:black;background-color:#eee;}
+  .phone.ios .kmw-key.kmw-key-shift-on,
+  .phone.ios .kmw-key.kmw-key-special-on {color:black;background-color:#88f;}
+  .phone.ios .kmw-key.kmw-key-touched {background-color:#6b6;}
+  .phone.ios .kmw-key-deadkey{color:#0d0;background-color:#3d3d3e;}
+
 }
