--- a/experimental/n/naijatype/source/naijatype.css
+++ b/experimental/n/naijatype/source/naijatype.css
@@ -104,10 +104,20 @@ margin-bottom: 15px;
     .phone.ios .kmw-key-layer-group {background-color: #eee}
   .phone.ios .kmw-key.kmw-key-default {color:black;background-color:#eee}
   .phone.ios .kmw-key.kmw-key-shift,
-  .phone.ios .kmw-key.kmw-key-special {color:black;background-color:#eee;}
+	.phone.ios .kmw-key.kmw-key-special {color:#eee;background-color:gray;}
   .phone.ios .kmw-key.kmw-key-shift-on,
-  .phone.ios .kmw-key.kmw-key-special-on {color:black;background-color:#88f;}
+	.phone.ios .kmw-key.kmw-key-special-on {color:#eee;background-color:#88f;}
   .phone.ios .kmw-key.kmw-key-touched {background-color:#6b6;}
   .phone.ios .kmw-key-deadkey{color:#0d0;background-color:#3d3d3e;}
+
+	.phone.android .kmw-key.kmw-key-default.kmw-spacebar, .phone.ios .kmw-key.kmw-key-default.kmw-spacebar {
+		border: 1pt solid gray;
+		border-bottom: none;
+		color: gray;
+}
+
+	.kmw-key.kmw-key-default.kmw-spacebar .kmw-spacebar-caption {
+		color: gray;
+	}
 
 }
