--- a/experimental/n/naijatype/source/naijatype.css
+++ b/experimental/n/naijatype/source/naijatype.css
@@ -98,7 +98,7 @@ margin-bottom: 15px;
 
   /* Style for callout used on phones */
   #kmw-popup-callout {
-  background-color: #eff3f9;
+    /* background-color: #eff3f9;*/
   }
 
     .phone.ios .kmw-key-layer-group {background-color: #eee}
