Finalized(?) updates for phone layers.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -17,8 +17,10 @@
 .phone div.kmw-key.kmw-key-default[id$='K_SPACE'], .tablet div.kmw-key.kmw-key-default[id$='K_SPACE']
   { background: #f4eee7 ; color: #f4eee7 ; } /* eceae4 */
 
-.phone div.kmw-key.kmw-key-default[id$='K_1+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'], /* ! */
-.phone div.kmw-key.kmw-key-default[id$='U_1362'],    .tablet div.kmw-key.kmw-key-default[id$='U_1362']        /* ። */
+.phone div.kmw-key.kmw-key-default[id$='K_1+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],  /* ! */
+.phone div.kmw-key.kmw-key-default[id$='U_1362'],    .tablet div.kmw-key.kmw-key-default[id$='U_1362'],     /* ። */
+.phone div.kmw-key.kmw-key-default[id$='T_BANG'],                                                           /* ! */
+.phone div.kmw-key.kmw-key-default[id$='T_1362']                                                            /* ። */
   { background: #f4eee7 ; color: black ; }
 
 
@@ -124,7 +126,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1340'], .tablet div.kmw-key.kmw-key-default[id$='U_1340'],  /* ፀ */
 .phone div.kmw-key.kmw-key-default[id$='U_1348'], .tablet div.kmw-key.kmw-key-default[id$='U_1348'],  /* ፈ */
 .phone div.kmw-key.kmw-key-default[id$='U_1350'], .tablet div.kmw-key.kmw-key-default[id$='U_1350'],  /* ፐ */
-.phone div.kmw-key.kmw-key-default[id$='T_ግዕዝ'], .tablet div.kmw-key.kmw-key-default[id$='T_ግዕዝ']
+.phone div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],   /* አ */
+.phone div.kmw-key.kmw-key-default[id$='K_2+shift'], .phone div.kmw-key.kmw-key-default[id$='T_1360'] /* @, ፠ */
   { background:  #e2f0cb ; color: black; } /*#baed91 */
 
 /* default layer ካዕብ */
@@ -166,7 +169,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1341'], .tablet div.kmw-key.kmw-key-default[id$='U_1341'],  /* ፁ */
 .phone div.kmw-key.kmw-key-default[id$='U_1349'], .tablet div.kmw-key.kmw-key-default[id$='U_1349'],  /* ፉ */
 .phone div.kmw-key.kmw-key-default[id$='U_1351'], .tablet div.kmw-key.kmw-key-default[id$='U_1351'],  /* ፑ */
-.phone div.kmw-key.kmw-key-default[id$='T_ካዕብ'], .tablet div.kmw-key.kmw-key-default[id$='T_ካዕብ']
+.phone div.kmw-key.kmw-key-default[id$='T_ካዕብ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ካዕብ'],   /* ኡ */
+.phone div.kmw-key.kmw-key-default[id$='K_4+shift'], .phone div.kmw-key.kmw-key-default[id$='T_1365'] /* $, ፥ */
   { background:  #ffffb5 ; color: black; } /* #faf884 */ 
 
 /* default layer ሣልስ */
@@ -208,7 +212,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1342'], .tablet div.kmw-key.kmw-key-default[id$='U_1342'],  /* ፂ */
 .phone div.kmw-key.kmw-key-default[id$='U_134A'], .tablet div.kmw-key.kmw-key-default[id$='U_134A'],  /* ፊ */
 .phone div.kmw-key.kmw-key-default[id$='U_1352'], .tablet div.kmw-key.kmw-key-default[id$='U_1352'],  /* ፒ */
-.phone div.kmw-key.kmw-key-default[id$='T_ሣልስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ሣልስ']
+.phone div.kmw-key.kmw-key-default[id$='T_ሣልስ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ሣልስ'],  /* ኢ */
+.phone div.kmw-key.kmw-key-default[id$='T_00AB'], .phone div.kmw-key.kmw-key-default[id$='T_1366']   /* «, ፦ */
   { background:  #fea3aa  ; color: black; }
 
 /* default layer ራብዕ */
@@ -250,7 +255,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1343'], .tablet div.kmw-key.kmw-key-default[id$='U_1343'],  /* ፃ */
 .phone div.kmw-key.kmw-key-default[id$='U_134B'], .tablet div.kmw-key.kmw-key-default[id$='U_134B'],  /* ፋ */
 .phone div.kmw-key.kmw-key-default[id$='U_1353'], .tablet div.kmw-key.kmw-key-default[id$='U_1353'],  /* ፓ */
-.phone div.kmw-key.kmw-key-default[id$='T_ራብዕ'], .tablet div.kmw-key.kmw-key-default[id$='T_ራብዕ']
+.phone div.kmw-key.kmw-key-default[id$='T_ራብዕ'], .tablet div.kmw-key.kmw-key-default[id$='T_ራብዕ'],    /* ኣ */
+.phone div.kmw-key.kmw-key-default[id$='T_00BB'], .phone div.kmw-key.kmw-key-default[id$='T_1361'] /* », : */
   { background:  #ccf1ff  ; color: black; } /* #b2cefe */
 
 /* default layer ኃምስ */
@@ -292,7 +298,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1344'], .tablet div.kmw-key.kmw-key-default[id$='U_1344'],  /* ፄ */
 .phone div.kmw-key.kmw-key-default[id$='U_134C'], .tablet div.kmw-key.kmw-key-default[id$='U_134C'],  /* ፌ */
 .phone div.kmw-key.kmw-key-default[id$='U_1354'], .tablet div.kmw-key.kmw-key-default[id$='U_1354'],  /* ፔ */
-.phone div.kmw-key.kmw-key-default[id$='T_ኃምስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ኃምስ']
+.phone div.kmw-key.kmw-key-default[id$='T_ኃምስ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ኃምስ'],  /* ኤ */
+.phone div.kmw-key.kmw-key-default[id$='K_SLASH'], .phone div.kmw-key.kmw-key-default[id$='T_1363']   /* /, ፣ */
   { background:  #e0d7ff  ; color: black; } /* #f2a2e8 */
 
 /* default layer ሳድስ - used primarily when a sadis letter appears in a popup or on the -extra layers */
@@ -374,8 +381,9 @@
 .phone div.kmw-key.kmw-key-default[id$='U_133E'], .tablet div.kmw-key.kmw-key-default[id$='U_133E'],  /* ጾ */
 .phone div.kmw-key.kmw-key-default[id$='U_1346'], .tablet div.kmw-key.kmw-key-default[id$='U_1346'],  /* ፆ */
 .phone div.kmw-key.kmw-key-default[id$='U_134E'], .tablet div.kmw-key.kmw-key-default[id$='U_134E'],  /* ፎ */
-.phone div.kmw-key.kmw-key-default[id$='U_1356'], .tablet div.kmw-key.kmw-key-default[id$='U_1356'],   /* ፖ */
-.phone div.kmw-key.kmw-key-default[id$='T_ሳብዕ'], .tablet div.kmw-key.kmw-key-default[id$='T_ሳብዕ']
+.phone div.kmw-key.kmw-key-default[id$='U_1356'], .tablet div.kmw-key.kmw-key-default[id$='U_1356'],  /* ፖ */
+.phone div.kmw-key.kmw-key-default[id$='T_ሳብዕ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ሳብዕ'],   /* ኦ */
+.phone div.kmw-key.kmw-key-default[id$='K_SLASH+shift'], .phone div.kmw-key.kmw-key-default[id$='T_1364']   /* ?, ፤︁ */
   { background:  #fad6b6  ; color: black; } /* f8b88b*/
 
 /* default layer ዘመደ-ራብዕ */
@@ -506,12 +514,18 @@
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'],
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'],
 .tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_HYPHEN, .tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_EQUAL,  
-.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift
+.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
+.ios .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
+.ios .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
+.ios .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
   {background: #fdfdfe ; color: black ; }
 
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1225'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1225'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1345'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1345'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_12E5'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_12E5'],
 .tablet.android .kmw-keyboard-gff_amharic #punctuation-K_HYPHEN, .tablet.android .kmw-keyboard-gff_amharic #punctuation-K_EQUAL, 
-.android .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift
+.android .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
+.android .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
+.android .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
+.android .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
   {background: #777 ; color: white ; }
