Start of flix, css enhancement for web browser views.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -514,18 +514,18 @@
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'],
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'],
 .tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_HYPHEN, .tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_EQUAL,  
-.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
-.ios .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
-.ios .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
-.ios .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
+.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
+.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
+.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
+.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
   {background: #fdfdfe ; color: black ; }
 
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1225'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1225'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1345'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1345'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_12E5'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_12E5'],
 .tablet.android .kmw-keyboard-gff_amharic #punctuation-K_HYPHEN, .tablet.android .kmw-keyboard-gff_amharic #punctuation-K_EQUAL, 
-.android .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
-.android .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
-.android .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
-.android .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
+.tablet.android .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
+.tablet.android .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
+.tablet.android .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
+.tablet.android .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
   {background: #777 ; color: white ; }
