--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -67,7 +67,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_136F'], .tablet div.kmw-key.kmw-key-default[id$='U_136F'], /* ፯ */
 .phone div.kmw-key.kmw-key-default[id$='U_1370'], .tablet div.kmw-key.kmw-key-default[id$='U_1370'], /* ፰ */
 .phone div.kmw-key.kmw-key-default[id$='U_1371'], .tablet div.kmw-key.kmw-key-default[id$='U_1371'], /* ፱ */
-.phone div.kmw-key.kmw-key-default[id$='U_1372+shift'], .tablet div.kmw-key.kmw-key-default[id$='U_1372'],  /* ፲ */
+/* .phone div.kmw-key.kmw-key-default[id$='U_1372'], .tablet div.kmw-key.kmw-key-default[id$='U_1372'], */  /* ፲ */
 .kmw-keyboard-gff_amharic #amharic-tens-extra-T_MORE  /* ▶ */
   { background:  #ece1d5 ; color: black ; }
 
@@ -339,7 +339,7 @@
 .phone div.kmw-key.kmw-key-default[id$='U_133D'], .tablet div.kmw-key.kmw-key-default[id$='U_133D'],  /* ጽ */
 .phone div.kmw-key.kmw-key-default[id$='U_1345'], /* .tablet div.kmw-key.kmw-key-default[id$='U_1345'],  /* ፅ */
 /* .phone div.kmw-key.kmw-key-default[id$='U_134D'], .tablet div.kmw-key.kmw-key-default[id$='U_134D'],  /* ፍ */
-/* .phone div.kmw-key.kmw-key-default[id$='U_1355'], .tablet div.kmw-key.kmw-key-default[id$='U_1355'],  /* ፕ */
+ .phone div.kmw-key.kmw-key-default[id$='U_1355'], /* .tablet div.kmw-key.kmw-key-default[id$='U_1355'],  /* ፕ */
 .phone div.kmw-key.kmw-key-default[id$='T_ሳድስ'], .tablet div.kmw-key.kmw-key-default[id$='T_ሳድስ']
   { background: #eceae4; color: black; }
 
@@ -514,18 +514,32 @@
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'],
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'],
 .tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_HYPHEN, .tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_EQUAL,  
-.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
-.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
-.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
-.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
+.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
+.ios .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
+.ios .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
+.ios .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
   {background: #fdfdfe ; color: black ; }
 
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1225'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1225'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1345'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1345'],
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_12E5'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_12E5'],
 .tablet.android .kmw-keyboard-gff_amharic #punctuation-K_HYPHEN, .tablet.android .kmw-keyboard-gff_amharic #punctuation-K_EQUAL, 
-.tablet.android .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
-.tablet.android .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
-.tablet.android .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
-.tablet.android .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
+.android .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
+.android .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
+.android .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.android .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
+.android .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
   {background: #777 ; color: white ; }
+
+
+
+#punctuation-K_1 .kmw-key-popup-icon,  #punctuation-K_2 .kmw-key-popup-icon,  #punctuation-K_3 .kmw-key-popup-icon,  
+#punctuation-K_4 .kmw-key-popup-icon,  #punctuation-K_5 .kmw-key-popup-icon,  #punctuation-K_6 .kmw-key-popup-icon,  
+#punctuation-K_7 .kmw-key-popup-icon,  #punctuation-K_8 .kmw-key-popup-icon,  #punctuation-K_9 .kmw-key-popup-icon,  
+#punctuation-K_0 .kmw-key-popup-icon,
+#amharic-extra-U_1369 .kmw-key-popup-icon, #amharic-extra-U_136A .kmw-key-popup-icon, 
+#amharic-extra-U_136B .kmw-key-popup-icon, #amharic-extra-U_136C .kmw-key-popup-icon, 
+#amharic-extra-U_136D .kmw-key-popup-icon, #amharic-extra-U_136E .kmw-key-popup-icon, 
+#amharic-extra-U_136F .kmw-key-popup-icon, #amharic-extra-U_1370 .kmw-key-popup-icon, 
+#amharic-extra-U_1371 .kmw-key-popup-icon, #amharic-extra-U_1372 .kmw-key-popup-icon
+{ color: #777 ; }
+// { color: black ; }
