--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -551,8 +551,29 @@
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_136F']  div.kmw-key-popup-icon.kmw-key-text,
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1370']  div.kmw-key-popup-icon.kmw-key-text,
 .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1371']  div.kmw-key-popup-icon.kmw-key-text,
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_1372']  div.kmw-key-popup-icon.kmw-key-text
+.phone.android div.kmw-key.kmw-key-default[id$='extra-U_1372']  div.kmw-key-popup-icon.kmw-key-text,
 
+.phone.android div.kmw-key.kmw-key-default[id$='T_ግዕዝ']  div.kmw-key-popup-icon.kmw-key-text, 
+.phone.android div.kmw-key.kmw-key-default[id$='T_ካዕብ']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='T_ሣልስ']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='T_ራብዕ']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='T_ኃምስ']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='T_ሳብዕ']  div.kmw-key-popup-icon.kmw-key-text,
 
-{ color: #777 ; }
+.phone.android div.kmw-key.kmw-key-default[id$='extra-U_1361']  div.kmw-key-popup-icon.kmw-key-text,
+
+.phone.android div.kmw-key.kmw-key-default[id$='T_BANG']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='T_1362']  div.kmw-key-popup-icon.kmw-key-text,
+
+.phone.android div.kmw-key.kmw-key-default[id$='K_2+shift']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='K_4+shift']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='K_SLASH']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='K_SLASH+shift']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='T_00AB']  div.kmw-key-popup-icon.kmw-key-text,
+.phone.android div.kmw-key.kmw-key-default[id$='T_00BB']  div.kmw-key-popup-icon.kmw-key-text,
+
+.phone.android div.kmw-key.kmw-key-default[id$='T_1360']  div.kmw-key-popup-icon.kmw-key-text
+
+{color: #777 ; }
+
 /* { color: black ; } */
