Completion of the tablet layer hints and flicks.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -572,7 +572,34 @@
 .phone.android div.kmw-key.kmw-key-default[id$='T_00AB']  div.kmw-key-popup-icon.kmw-key-text,
 .phone.android div.kmw-key.kmw-key-default[id$='T_00BB']  div.kmw-key-popup-icon.kmw-key-text,
 
-.phone.android div.kmw-key.kmw-key-default[id$='T_1360']  div.kmw-key-popup-icon.kmw-key-text
+.phone.android div.kmw-key.kmw-key-default[id$='T_1360']  div.kmw-key-popup-icon.kmw-key-text,
+
+/* Tablet */
+.tablet.android div.kmw-key.kmw-key-default[id$='T_ግዕዝ']  div.kmw-key-popup-icon.kmw-key-text, 
+.tablet.android div.kmw-key.kmw-key-default[id$='T_ካዕብ']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='T_ሣልስ']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='T_ራብዕ']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='T_ኃምስ']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='T_ሳብዕ']  div.kmw-key-popup-icon.kmw-key-text,
+
+.tablet.android div.kmw-key.kmw-key-default[id$='K_1']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_2']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_3']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_4']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_5']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_6']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_7']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_8']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_9']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_0']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_HYPHEN']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_EQUAL']  div.kmw-key-popup-icon.kmw-key-text,
+
+.tablet.android div.kmw-key.kmw-key-default[id$='extra-U_00AB']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='extra-U_00BB']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1361']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='U_1362']  div.kmw-key-popup-icon.kmw-key-text,
+.tablet.android div.kmw-key.kmw-key-default[id$='K_1+shift']  div.kmw-key-popup-icon.kmw-key-text
 
 {color: #777 ; }
 
