Fix index size warning. Borders added to colorless popup keys.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -603,4 +603,34 @@
 
 {color: #777 ; }
 
-/* { color: black ; } */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_SLASH+shift'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_SLASH'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_002E'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_002C'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_003A'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2019'],
+
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COLON+shift'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COMMA'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COLON'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00AB'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00BB'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1366'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COLON+shift'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_3+shift'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20AC'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_5+shift'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_2039'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_2018'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_201C'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_203A'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_2019'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_201D'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_9+shift'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_0+shift']
+{
+  border-color: #d0d3d9;
+  border-style: solid;
+}
