Completion(?) of flicks and css.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -18,7 +18,8 @@
 .phone div.kmw-key.kmw-key-default[id$='K_SPACE'], .tablet div.kmw-key.kmw-key-default[id$='K_SPACE']
   { background: #f4eee7 ; color: #f4eee7 ; } /* eceae4 */
 
-.phone div.kmw-key.kmw-key-default[id$='K_1+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],  /* ! */
+/* .phone div.kmw-key.kmw-key-default[id$='K_1+shift'], .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'], */ /* ! */
+
 .phone div.kmw-key.kmw-key-default[id$='U_1362'],    .tablet div.kmw-key.kmw-key-default[id$='U_1362'],     /* ። */
 .phone div.kmw-key.kmw-key-default[id$='T_BANG'],                                                           /* ! */
 .phone div.kmw-key.kmw-key-default[id$='T_1362']                                                            /* ። */
@@ -127,8 +128,9 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1340'], .tablet div.kmw-key.kmw-key-default[id$='U_1340'],  /* ፀ */
 .phone div.kmw-key.kmw-key-default[id$='U_1348'], .tablet div.kmw-key.kmw-key-default[id$='U_1348'],  /* ፈ */
 .phone div.kmw-key.kmw-key-default[id$='U_1350'], .tablet div.kmw-key.kmw-key-default[id$='U_1350'],  /* ፐ */
-.phone div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],   /* አ */
-.phone div.kmw-key.kmw-key-default[id$='K_2+shift'], .phone div.kmw-key.kmw-key-default[id$='T_1360'] /* @, ፠ */
+.phone div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],   .tablet div.kmw-key.kmw-key-default[id$='T_ግዕዝ'],   /* አ */
+.phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_2\+shift,
+           .phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1360  /* @, ፠ */
   { background:  #e2f0cb ; color: black; } /*#baed91 */
 
 /* default layer ካዕብ */
@@ -170,8 +172,9 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1341'], .tablet div.kmw-key.kmw-key-default[id$='U_1341'],  /* ፁ */
 .phone div.kmw-key.kmw-key-default[id$='U_1349'], .tablet div.kmw-key.kmw-key-default[id$='U_1349'],  /* ፉ */
 .phone div.kmw-key.kmw-key-default[id$='U_1351'], .tablet div.kmw-key.kmw-key-default[id$='U_1351'],  /* ፑ */
-.phone div.kmw-key.kmw-key-default[id$='T_ካዕብ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ካዕብ'],   /* ኡ */
-.phone div.kmw-key.kmw-key-default[id$='K_4+shift'], .phone div.kmw-key.kmw-key-default[id$='T_1365'] /* $, ፥ */
+.phone div.kmw-key.kmw-key-default[id$='T_ካዕብ'],   .tablet div.kmw-key.kmw-key-default[id$='T_ካዕብ'],   /* ኡ */
+.phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_4\+shift,
+           .phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1365  /* $, ፥ */
   { background:  #ffffb5 ; color: black; } /* #faf884 */ 
 
 /* default layer ሣልስ */
@@ -300,7 +303,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_134C'], .tablet div.kmw-key.kmw-key-default[id$='U_134C'],  /* ፌ */
 .phone div.kmw-key.kmw-key-default[id$='U_1354'], .tablet div.kmw-key.kmw-key-default[id$='U_1354'],  /* ፔ */
 .phone div.kmw-key.kmw-key-default[id$='T_ኃምስ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ኃምስ'],  /* ኤ */
-.phone div.kmw-key.kmw-key-default[id$='K_SLASH'], .phone div.kmw-key.kmw-key-default[id$='T_1363']   /* /, ፣ */
+.phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_SLASH,
+           .phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1363  /* /, ፣ */
   { background:  #e0d7ff  ; color: black; } /* #f2a2e8 */
 
 /* default layer ሳድስ - used primarily when a sadis letter appears in a popup or on the -extra layers */
@@ -384,7 +388,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_134E'], .tablet div.kmw-key.kmw-key-default[id$='U_134E'],  /* ፎ */
 .phone div.kmw-key.kmw-key-default[id$='U_1356'], .tablet div.kmw-key.kmw-key-default[id$='U_1356'],  /* ፖ */
 .phone div.kmw-key.kmw-key-default[id$='T_ሳብዕ'],  .tablet div.kmw-key.kmw-key-default[id$='T_ሳብዕ'],   /* ኦ */
-.phone div.kmw-key.kmw-key-default[id$='K_SLASH+shift'], .phone div.kmw-key.kmw-key-default[id$='T_1364']   /* ?, ፤︁ */
+.phone .kmw-keyboard-gff_amharic #latin-punct-layer-K_SLASH\+shift,
+.phone .kmw-keyboard-gff_amharic #ethio-punct-layer-T_1364    /* ?, ፤︁ */
   { background:  #fad6b6  ; color: black; } /* f8b88b*/
 
 /* default layer ዘመደ-ራብዕ */
@@ -514,9 +519,12 @@
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_1225'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_1225'],
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_1345'],
 .phone.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'], .tablet.ios div.kmw-key.kmw-key-default[id$='extra-U_12E5'],
+
 .tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_HYPHEN, .tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_EQUAL,  
-.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
+/*
 .ios .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
+*/
+.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
 .ios .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
 .ios .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
   {background: #fdfdfe ; color: black ; }
@@ -600,10 +608,9 @@
 .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1361']  div.kmw-key-popup-icon.kmw-key-text,
 .tablet.android div.kmw-key.kmw-key-default[id$='U_1362']  div.kmw-key-popup-icon.kmw-key-text,
 .tablet.android div.kmw-key.kmw-key-default[id$='K_1+shift']  div.kmw-key-popup-icon.kmw-key-text
-
 {color: #777 ; }
 
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_SLASH+shift'],
+/* #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_SLASH+shift'], */
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_SLASH'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_002E'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_002C'],
@@ -611,25 +618,61 @@
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2019'],
 
 
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COLON+shift'],
+/* #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COLON+shift'], */
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COMMA'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COLON'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00AB'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00BB'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1366'],
 
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COLON+shift'],
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_3+shift'],
+/* #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_COLON+shift'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_3+shift'], */
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20AC'],
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_5+shift'],
+/* #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_5+shift'], */
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_2039'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_2018'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_201C'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_203A'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_2019'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_201D'],
+/*
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_9+shift'],
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_0+shift']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_0+shift'],
+*/
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20BD'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A5'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A2'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A3'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_20A9'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2039'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_203A'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_0060'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2018'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2019'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_BKSLASH'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_201C'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_201D'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_201E'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2013'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2014'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2022'],
+
+/* #kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_1+shift'], */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='K_PERIOD'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00B0'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A1'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00A7'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_00BF'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2026'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2030'],
+
+/* tablet extras */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='shift']
 {
   border-color: #d0d3d9;
   border-style: solid;
