css border refinements.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -671,8 +671,8 @@
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2026'],
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2030'],
 
-/* tablet extras */
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='shift']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='shift'],
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_1368']
 {
   border-color: #d0d3d9;
   border-style: solid;
