--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -672,7 +672,9 @@
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_2030'],
 
 #kmw-popup-keys div.kmw-key.kmw-key-default[id$='shift'],
-#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_1368']
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_1368'],
+
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='U_1285']
 {
   border-color: #d0d3d9;
   border-style: solid;
