--- a/release/gff/gff_amharic/source/help/kb.css
+++ b/release/gff/gff_amharic/source/help/kb.css
@@ -524,6 +524,7 @@
 /*
 .ios .kmw-keyboard-gff_amharic #punctuation-K_2\+shift,  .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_2\+shift,
 */
+.tablet.ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, 
 .ios .kmw-keyboard-gff_amharic #punctuation-K_1\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_1\+shift,
 .ios .kmw-keyboard-gff_amharic #punctuation-K_SLASH\+shift, .phone.ios .kmw-keyboard-gff_amharic #punctuation-2-K_SLASH\+shift,
 .ios .kmw-keyboard-gff_amharic #punctuation-K_4\+shift
