Updates for numeral flicks and taps.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -556,7 +556,6 @@
 /* .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1367'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1367'] */
   {background: #777 ; color: white ; } 
 
-
 /* change hint color for colored keys */
 
 div.kmw-key.kmw-key-default[id$='K_1']  div.kmw-key-popup-icon.kmw-key-text,
@@ -569,8 +568,9 @@ div.kmw-key.kmw-key-default[id$='K_7']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_8']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_9']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_0']  div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id='default-K_HYPHEN']  div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id='default-K_EQUAL']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='default-K_HYPHEN']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='layer-K_HYPHEN']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_EQUAL']  div.kmw-key-popup-icon.kmw-key-text,
 
 div.kmw-key.kmw-key-default[id$='extra-U_1369']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='extra-U_136A']  div.kmw-key-popup-icon.kmw-key-text,
