--- a/release/gff/gff_amharic/source/help/kb.css
+++ b/release/gff/gff_amharic/source/help/kb.css
@@ -5,10 +5,10 @@
 
 
 /* functional keys */
-.phone div.kmw-key.kmw-key-shift[id$='K_LOPT'],     .tablet div.kmw-key.kmw-key-shift[id$='K_LOPT'],
-.phone div.kmw-key.kmw-key-shift[id$='K_BKSP'],     .tablet div.kmw-key.kmw-key-shift[id$='K_BKSP'],
+.phone div.kmw-key.kmw-key-shift[id$='K_LOPT'],    .tablet div.kmw-key.kmw-key-shift[id$='K_LOPT'],
+.phone div.kmw-key.kmw-key-shift[id$='K_BKSP'],    .tablet div.kmw-key.kmw-key-shift[id$='K_BKSP'],
 .phone div.kmw-key.kmw-key-shift[id$='K_ENTER'],   .tablet div.kmw-key.kmw-key-shift[id$='K_ENTER'],
-.phone div.kmw-key.kmw-key-shift[id$='K_SHIFT'],    .tablet div.kmw-key.kmw-key-shift[id$='K_SHIFT'],
+.phone div.kmw-key.kmw-key-shift[id$='K_SHIFT'],   .tablet div.kmw-key.kmw-key-shift[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-special[id$='K_SHIFT'], .tablet div.kmw-key.kmw-key-special[id$='K_SHIFT'],
 .phone div.kmw-key.kmw-key-shift[id$='T_EMPTY'],   .tablet div.kmw-key.kmw-key-shift[id$='T_EMPTY']
 /* { background: #f3d6ce  ; color: black; } */
@@ -18,7 +18,7 @@
 .phone div.kmw-key.kmw-key-default[id$='K_SPACE'], .tablet div.kmw-key.kmw-key-default[id$='K_SPACE']
   { background: #f4eee7 ; color: #f4eee7 ; } /* eceae4 */
 
-/* .phone div.kmw-key.kmw-key-default[id$='K_1+shift'], */ .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],  /* ! */
+/* .phone div.kmw-key.kmw-key-default[id$='K_1+shift'],  .tablet div.kmw-key.kmw-key-default[id$='K_1+shift'],  /* ! */
 
 .phone div.kmw-key.kmw-key-default[id$='U_1362'],    .tablet div.kmw-key.kmw-key-default[id$='U_1362'],     /* ። */
 .phone div.kmw-key.kmw-key-default[id$='T_BANG'],                                                           /* ! */
@@ -40,7 +40,19 @@
 .phone div.kmw-key.kmw-key-default[id$='extra-U_1366'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1366'], /* ፦ */
 .phone div.kmw-key.kmw-key-default[id$='extra-U_1367'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1367'], /* ፧ */
 .phone div.kmw-key.kmw-key-default[id$='extra-U_1360'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1360'], /* ፠ */
-.phone div.kmw-key.kmw-key-default[id$='extra-U_1368'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1368']  /* ፨ */
+.phone div.kmw-key.kmw-key-default[id$='extra-U_1368'], .tablet div.kmw-key.kmw-key-default[id$='extra-U_1368'], /* ፨ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_1361'], /* ፡ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_1363'], /* ፣ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_1364'], /* ፤ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_1366'], /* ፦ */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_00AB'], /* « */
+.tablet div.kmw-key.kmw-key-default[id='popup-default-U_00BB'], /* » */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_1361'], /* ፡ */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_1363'], /* ፣ */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_1364'], /* ፤ */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_1366'], /* ፦ */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_00AB'], /* « */
+.tablet div.kmw-key.kmw-key-default[id$='layer-U_00BB']  /* » */
   { background:  #f4eee7 ; color: black ; }
 
 /* amharic-extra layer: western numerals */
@@ -540,10 +552,9 @@
 .android .kmw-keyboard-gff_amharic #punctuation-K_4\+shift,
 .android .kmw-keyboard-gff_amharic #amharic-extra-K_SLASH\+shift , .phone.android .kmw-keyboard-gff_amharic #amharic-extra-2-K_SLASH\+shift,
 .phone.android div.kmw-key.kmw-key-default[id$='extra-K_SLASH+shift'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-K_SLASH+shift'],
-.phone.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift'],
-.phone.android div.kmw-key.kmw-key-default[id$='extra-U_1367'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1367']
+.phone.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-K_1+shift']
+/* .phone.android div.kmw-key.kmw-key-default[id$='extra-U_1367'], .tablet.android div.kmw-key.kmw-key-default[id$='extra-U_1367'] */
   {background: #777 ; color: white ; } 
-
 
 /* change hint color for colored keys */
 
@@ -557,8 +568,9 @@ div.kmw-key.kmw-key-default[id$='K_7']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_8']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_9']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='K_0']  div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id='default-K_HYPHEN']  div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id='default-K_EQUAL']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='default-K_HYPHEN']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='layer-K_HYPHEN']  div.kmw-key-popup-icon.kmw-key-text,
+div.kmw-key.kmw-key-default[id$='K_EQUAL']  div.kmw-key-popup-icon.kmw-key-text,
 
 div.kmw-key.kmw-key-default[id$='extra-U_1369']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='extra-U_136A']  div.kmw-key-popup-icon.kmw-key-text,
@@ -582,8 +594,8 @@ div.kmw-key.kmw-key-default[id$='_1360']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='_1361']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='_1362']  div.kmw-key-popup-icon.kmw-key-text,
 
-div.kmw-key.kmw-key-default[id$='layer-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
-div.kmw-key.kmw-key-default[id='default-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
+.phone div.kmw-key.kmw-key-default[id$='layer-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
+.phone div.kmw-key.kmw-key-default[id='default-K_1+shift']  div.kmw-key-popup-icon.kmw-key-text,
 div.kmw-key.kmw-key-default[id$='T_BANG']  div.kmw-key-popup-icon.kmw-key-text,
 
 div.kmw-key.kmw-key-default[id$='K_2+shift']  div.kmw-key-popup-icon.kmw-key-text,
@@ -666,4 +678,5 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 {
   border-color: #d0d3d9;
   border-style: solid;
+  border-width: 1px;
 }
