Revision of help/gff_amharic.php to synch with welcome.htm

--- a/release/gff/gff_amharic/source/help/html.css
+++ b/release/gff/gff_amharic/source/help/html.css
@@ -12,3 +12,74 @@ code {
     border-radius: 6px;
     box-sizing: border-box;
 }
+
+.keys {
+  display: inline-block;
+  border: 1px solid black;
+  padding: 5px; /* Add some space inside the box */
+  margin: 0 2px; /* Add some space between the boxes */
+}
+kbd {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+  margin: 0 2px; /* Add some space between the boxes */
+}
+.output {
+  border-radius: 2px;
+  padding: 2px;
+  border: 2px solid green;
+}
+.input {
+  border-radius: 2px;
+  padding: 2px;
+  border: 1px solid black;
+}
+.key_example
+{
+  background-color: #ebebeb;
+}
+.geez {
+  background:  #e2f0cb ; 
+}
+.kaib {
+  background:  #ffffb5 ;
+}
+.salis {
+  background:  #fea3aa ;
+}
+.rabi {
+  background: #ccf1ff ;
+}
+.hamis {
+  background: #e0d7ff ;
+}
+.sabi {
+  background: #fad6b6 ;
+}
+.zemede-geez {
+  background: #ffffff;  color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
+}
+.zemede-kaib {
+  background: #ffffff; color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #eceae4 100%);
+}
+.zemede-salis {
+  background: #ffffff;  color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #fea3aa 100%);
+}
+.zemede-rabi {
+  background: #ffffff;  color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
+}
+.zemede-hamis {
+  background: #ffffff;  color: black ;
+  background: linear-gradient(180deg, #ffffff 0%, #e0d7ff 100%);
+}
+.epunct {
+  background: #f4eee7 ;
+}
+.etens {
+  background: #f3d6ce ;
+}
