More key-glow definitions and composition improvements for the "extras" layer.

--- a/release/gff/gff_amharic/source/gff_amharic.css
+++ b/release/gff/gff_amharic/source/gff_amharic.css
@@ -445,7 +445,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1380'], .tablet div.kmw-key.kmw-key-default[id$='U_1380'],  /* ᎀ */
 .phone div.kmw-key.kmw-key-default[id$='U_1384'], .tablet div.kmw-key.kmw-key-default[id$='U_1384'],  /* ᎄ */
 .phone div.kmw-key.kmw-key-default[id$='U_1388'], .tablet div.kmw-key.kmw-key-default[id$='U_1388'],  /* ᎈ */
-.phone div.kmw-key.kmw-key-default[id$='U_138C'], .tablet div.kmw-key.kmw-key-default[id$='U_138C']   /* ᎌ */
+.phone div.kmw-key.kmw-key-default[id$='U_138C'], .tablet div.kmw-key.kmw-key-default[id$='U_138C'],   /* ᎌ */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWE']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
@@ -466,7 +467,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1387'], .tablet div.kmw-key.kmw-key-default[id$='U_1387'],  /* ᎇ */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FA'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FA'], /* 𞟺 */
 .phone div.kmw-key.kmw-key-default[id$='U_138B'], .tablet div.kmw-key.kmw-key-default[id$='U_138B'],  /* ᎋ */
-.phone div.kmw-key.kmw-key-default[id$='U_138F'], .tablet div.kmw-key.kmw-key-default[id$='U_138F']   /* ᎏ */
+.phone div.kmw-key.kmw-key-default[id$='U_138F'], .tablet div.kmw-key.kmw-key-default[id$='U_138F'],  /* ᎏ */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWU']
   {
     background: #ffffff; color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #eceae4 100%);
@@ -487,7 +489,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F3'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F3'], /* 𞟳 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F8'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F8'], /* 𞟸 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FB'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FB'], /* 𞟻 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7FD'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FD']  /* 𞟽 */
+.phone div.kmw-key.kmw-key-default[id$='U_1E7FD'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FD'], /* 𞟽 */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWI']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #fea3aa 100%);
@@ -500,7 +503,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_12B3'], .tablet div.kmw-key.kmw-key-default[id$='U_12B3'], /* ኳ */
 .phone div.kmw-key.kmw-key-default[id$='U_12C3'], .tablet div.kmw-key.kmw-key-default[id$='U_12C3'], /* ዃ */
 .phone div.kmw-key.kmw-key-default[id$='U_1313'], .tablet div.kmw-key.kmw-key-default[id$='U_1313'], /* ጓ */
-.phone div.kmw-key.kmw-key-default[id$='U_131F'], .tablet div.kmw-key.kmw-key-default[id$='U_131F']  /* ጟ */
+.phone div.kmw-key.kmw-key-default[id$='U_131F'], .tablet div.kmw-key.kmw-key-default[id$='U_131F'], /* ጟ */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWAA']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #ccf1ff 100%);
@@ -521,7 +525,8 @@
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F6'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F6'], /* 𞟶 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7F9'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7F9'], /* 𞟹 */
 .phone div.kmw-key.kmw-key-default[id$='U_1E7FC'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FC'], /* 𞟼 */
-.phone div.kmw-key.kmw-key-default[id$='U_1E7FE'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FE']  /* 𞟾 */
+.phone div.kmw-key.kmw-key-default[id$='U_1E7FE'], .tablet div.kmw-key.kmw-key-default[id$='U_1E7FE'], /* 𞟾 */
+#kmw-popup-keys div.kmw-key.kmw-key-default[id$='T_WWEE']
   {
     background: #ffffff;  color: black ;
     background: linear-gradient(180deg, #ffffff 0%, #e0d7ff 100%);
@@ -679,4 +684,75 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
   border-color: #d0d3d9;
   border-style: solid;
   border-width: 1px;
+}
+
+.phone.ios div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'], .tablet div.kmw-key.kmw-key-default[id='ዐ-layer-U_12D5'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'], .tablet div.kmw-key.kmw-key-default[id='ሸ-layer-K_X'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጀ-layer-K_J'], .tablet div.kmw-key.kmw-key-default[id='ጀ-layer-K_J'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፈ-layer-K_F'], .tablet div.kmw-key.kmw-key-default[id='ፈ-layer-K_F'],
+.phone.ios div.kmw-key.kmw-key-default[id='ቀ-layer-K_Q'], .tablet div.kmw-key.kmw-key-default[id='ቀ-layer-K_Q'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሐ-layer-K_H+shift'], .tablet div.kmw-key.kmw-key-default[id='ሐ-layer-K_H+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ቸ-layer-K_C'], .tablet div.kmw-key.kmw-key-default[id='ቸ-layer-K_C'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'], .tablet div.kmw-key.kmw-key-default[id='ጨ-layer-K_C+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='የ-layer-K_Y'], .tablet div.kmw-key.kmw-key-default[id='የ-layer-K_Y'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'], .tablet div.kmw-key.kmw-key-default[id='ጰ-layer-K_P+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'], .tablet div.kmw-key.kmw-key-default[id='ፐ-layer-K_P+shift'],
+
+.phone.ios div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'], .tablet div.kmw-key.kmw-key-default[id='አ-layer-U_12A5'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'], .tablet div.kmw-key.kmw-key-default[id='ሰ-layer-K_S'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'], .tablet div.kmw-key.kmw-key-default[id='ሠ-layer-K_S'],
+.phone.ios div.kmw-key.kmw-key-default[id='ደ-layer-K_D'], .tablet div.kmw-key.kmw-key-default[id='ደ-layer-K_D'],
+.phone.ios div.kmw-key.kmw-key-default[id='ረ-layer-K_R'], .tablet div.kmw-key.kmw-key-default[id='ረ-layer-K_R'],
+.phone.ios div.kmw-key.kmw-key-default[id='ከ-layer-K_K'], .tablet div.kmw-key.kmw-key-default[id='ከ-layer-K_K'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'], .tablet div.kmw-key.kmw-key-default[id='ሀ-layer-K_H'],
+.phone.ios div.kmw-key.kmw-key-default[id='ተ-layer-K_T'], .tablet div.kmw-key.kmw-key-default[id='ተ-layer-K_T'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'], .tablet div.kmw-key.kmw-key-default[id='ጠ-layer-K_T+shift'],
+.phone div.kmw-key.kmw-key-default[id='ለ-layer-K_L'], .tablet div.kmw-key.kmw-key-default[id='ለ-layer-K_L'],
+.phone.ios div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'], .tablet div.kmw-key.kmw-key-default[id='ጸ-layer-K_S+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'], .tablet div.kmw-key.kmw-key-default[id='ፀ-layer-K_S+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'], .tablet div.kmw-key.kmw-key-default[id='ዘ-layer-K_Z'],
+.phone.ios div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'], .tablet div.kmw-key.kmw-key-default[id='ዠ-layer-K_Z'],
+.phone.ios div.kmw-key.kmw-key-default[id='ወ-layer-K_W'], .tablet div.kmw-key.kmw-key-default[id='ወ-layer-K_W'],
+.phone.ios div.kmw-key.kmw-key-default[id='ገ-layer-K_G'], .tablet div.kmw-key.kmw-key-default[id='ገ-layer-K_G'],
+.phone.ios div.kmw-key.kmw-key-default[id='በ-layer-K_B'], .tablet div.kmw-key.kmw-key-default[id='በ-layer-K_B'],
+.phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
+.phone.ios div.kmw-key.kmw-key-default[id='ነ-layer-K_N'], .tablet div.kmw-key.kmw-key-default[id='ነ-layer-K_N'],
+.phone.ios div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet div.kmw-key.kmw-key-default[id='መ-layer-K_M'],
+
+
+.phone.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'], .tablet.ios div.kmw-key.kmw-key-default[id='ጘ-extra-U_131D'],
+
+.phone.ios div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
+.phone.ios div.kmw-key.kmw-key-default[id='ዠ-extra-U_12E5'],
+.phone.ios div.kmw-key.kmw-key-default[id='ሠ-extra-U_1225'],
+.phone.ios div.kmw-key.kmw-key-default[id='ኸ-extra-K_K+shift'],
+.phone.ios div.kmw-key.kmw-key-default[id='ኀ-extra-U_1285'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፀ-extra-U_1345'],
+.phone.ios div.kmw-key.kmw-key-default[id='ፐ-extra-K_P'],
+.phone.ios div.kmw-key.kmw-key-default[id='ቨ-extra-K_V'],
+
+/*
+ ቕቐጝጘ𞟥አዀ𞟨ᎀᎈ
+ */
+.tablet.ios div.kmw-key.kmw-key-default[id='𞟠-extra-U_1E7E0'],
+
+.phone div.kmw-key.kmw-key-default[id='latin-punct-layer-T_BANG'], .phone div.kmw-key.kmw-key-default[id='ethio-punct-layer-T_1362']
+{
+    /* background:#F6EEE3; */
+     background: #EBE8E2;
+     border-style: solid;
+     border-width: 1px;
+     border-color: #777;
+     box-shadow: 0 0 2px 2px #777;
+}
+
+.phone.android div.kmw-key.kmw-key-default[id='መ-layer-K_M'], .tablet.android div.kmw-key.kmw-key-default[id='መ-layer-K_M']
+{
+    color:#777;
+    /* background:#F6EEE3; */
+     background: #eceae4;
+     border-style: solid;
+     border-width: 1px;
+     border-color: #777;
+     box-shadow: 0 0 2px 2px #777;
 }
